fix: fixed viewport bug on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@ body {
 }
 
 .main-container {
-  height: 100dvh;
+  height: 100svh;
   display: flex;
   flex-direction: column;
   overflow-y: hidden;
